@@ -26,10 +26,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.codehaus.gant</groupId>
-  <artifactId>gant</artifactId>
+  <artifactId>@artifactId@</artifactId>
   <packaging>jar</packaging>
   <name>Gant</name>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>@gantVersion@</version>
   <description>
     Gant is a build tool for scripting Ant tasks using Groovy instead of XML to specify the build logic. A
     Gant build specification is just a Groovy script and so can bring all the power of Groovy to bear
@@ -139,20 +139,20 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-      <version>1.5.7</version>
+      <version>@groovyVersion@</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.0</version>
+      <version>@commonsCliVersion@</version>
       <scope>compile</scope>
     </dependency>
    <!-- For the Gant Ant task only. -->
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.7.1</version>
+      <version>@antVersion@</version>
       <scope>compile</scope>
     </dependency>
     <!-- For the Maven target set, the Ant bootstrap, and some build targets of Gant using Gant. -->
@@ -170,152 +170,5 @@
       <scope>runtime</scope>
     </dependency>
   </dependencies>
-  
-  <build>
-    <defaultGoal>install</defaultGoal>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.groovy.maven</groupId>
-          <artifactId>gmaven-plugin</artifactId>
-          <version>1.0-rc-4-SNAPSHOT</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <requireJavaVersion>
-                  <version>[1.5,)</version>
-                </requireJavaVersion>
-                <requireMavenVersion>
-                  <version>[2.0.5,)</version>
-                </requireMavenVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-          <debug>on</debug>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.groovy.maven</groupId>
-        <artifactId>gmaven-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>generateStubs</goal>
-              <goal>compile</goal>
-              <goal>generateTestStubs</goal>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <redirectTestOutputToFile>true</redirectTestOutputToFile>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifestEntries>
-              <Extension-Name>gant</Extension-Name>
-              <Specification-Title>Gant: Scripting Ant tasks with Groovy.</Specification-Title>
-              <Specification-Version>${pom.version}</Specification-Version>
-              <Specification-Vendor>The Codehaus</Specification-Vendor>
-              <Implementation-Title>Gant: Scripting Ant tasks with Groovy.</Implementation-Title>
-              <Implementation-Version>${pom.version}</Implementation-Version>
-              <Implementation-Vendor>The Codehaus</Implementation-Vendor>
-              <url>${pom.url}</url>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-        </configuration>
-      </plugin>
-       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>target_forMavenTest</directory>
-            </fileset>
-            <fileset>
-              <directory>.</directory>
-              <includes>
-                <include>**/*~</include>
-                <include>cobertura.ser</include>
-                <include>texput.log</include>
-              </includes>
-              <followSymlinks>false</followSymlinks>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-    </plugins>
 
-    <!--
-        It seems that Maven (at least up to 2.0.9) doesn't download this artefact, which is needed for
-        deployment, as a matter of course.  So unless we specify it here then the WebDAV stuff doesn't work.
-    -->
-
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav</artifactId>
-        <version>1.0-beta-2</version>
-      </extension>
-    </extensions>
-  </build>
-  
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <packageNames>Gant</packageNames>
-          <overview>${basedir}/overview.html</overview>
-          <private>yes</private>
-          <author>true</author>
-          <version>true</version>
-          <use>true</use>
-          <locale>en_GB</locale>
-          <source>1.5</source>
-          <bottom>Copyright &#169; 2006&#8211;2008 Russel Winder.  All rights reserved.</bottom>
-          <charset>UTF-8</charset>
-          <breakIterator>yes</breakIterator>
-        </configuration>
-      </plugin>          
-    </plugins>
-  </reporting>
-  
 </project>
